# Zero_Nine

./: .ai-files  .clippy.toml  .dockerignore  .gitignore  AGENTS.md  BLUEPRINT_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Zero_Nine 发展战略规划蓝图.md  Zero_Nine 后续开发阶段详细计划.md  Zero_Nine 对齐《十三层 HarnessAgent 闭环进化架构教材》的现状评估与后续开发路线.md  cliff.toml  justfile  rustfmt.toml  skills-lock.json  项目架构与使用说明.md
.agents/skills/andrej-karpathy-perspective/: README.md
.claude/: settings.local.json
.claude/commands/: zero-nine.md
.claude/plans/: zero-nine-rust-ai-mighty-wreath.md
.claude/projects/-Users-tangxingzhuang-Freedom-Zero-Nine/: MEMORY.md
.claude/projects/-Users-tangxingzhuang-Freedom-Zero-Nine/memory/: project_harness_engineering.md
.claude/skills/quick-build/: SKILL.md
.claude/skills/reinstall/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.opencode/commands/: zero-nine.md
.opencode/skills/zero-nine-orchestrator/: SKILL.md
.qoder/: settings.local.json
.trae/skills/: andrej-karpathy-perspective
adapters/claude-code/.claude/commands/: zero-nine.md
crates/zn-agent-sdk/: Cargo.toml
crates/zn-agent-sdk/src/: lib.rs
crates/zn-bridge/: Cargo.toml  build.rs
crates/zn-bridge/examples/: grpc-server.rs
crates/zn-bridge/proto/: bridge.proto
crates/zn-bridge/src/: lib.rs  mcp_client.rs  mcp_server.rs  server.rs  service.rs  types.rs
crates/zn-cli/: Cargo.toml
crates/zn-cli/src/: main.rs  tui_dashboard.rs
crates/zn-cli/tests/: lifecycle_test.rs  subcommands_test.rs
crates/zn-cli/tests/snapshots/: subcommands_test__init_manifest_snapshot.snap
crates/zn-evolve/: Cargo.toml
crates/zn-evolve/src/: ai_client.rs  belief.rs  cloud_sync.rs  curriculum.rs  distiller.rs  error_patterns.rs  integration_engine.rs  lib.rs  reward.rs  scorer.rs  signal_detector.rs  skill_evolver.rs  skill_registry.rs
crates/zn-evolve/src/snapshots/: zn_evolve__distiller__tests__distill_skill_markdown_snapshot.snap  zn_evolve__distiller__tests__distilled_skill_snapshot.snap  zn_evolve__skill_registry__tests__registry_summary_snapshot.snap
crates/zn-exec/: Cargo.toml
crates/zn-exec/.zero_nine/runtime/verification/task-4/: review-evidence.md  tests-evidence.md
crates/zn-exec/.zero_nine/runtime/verification/task-5/: review-evidence.md  tests-evidence.md
crates/zn-exec/.zero_nine/runtime/verification/task-6/: review-evidence.md  tests-evidence.md
crates/zn-exec/src/: a2a_bus.rs  agent_executors.rs  agent_protocol.rs  bridge_client.rs  bridge_handler.rs  capability_registry.rs  container_sandbox.rs  drift.rs  governance.rs  lib.rs  llm_fallback.rs  memory_handler.rs  observability.rs  safe_command.rs  subagent_dispatcher.rs  task_classifier.rs  team_coordinator.rs  token_counter.rs  workspace_prep.rs
crates/zn-exec/src/snapshots/: zn_exec__governance__governance_tests__approval_ticket_snapshot.snap  zn_exec__governance__governance_tests__audit_entry_snapshot.snap
crates/zn-host/: Cargo.toml
crates/zn-host/src/: channel.rs  channels.rs  github.rs  lib.rs
crates/zn-loop/: Cargo.toml
crates/zn-loop/src/: cron_scheduler.rs  github_poll.rs  lib.rs
crates/zn-sdk/: Cargo.toml
crates/zn-sdk/src/: lib.rs
crates/zn-sdk/tests/: sdk_facade_test.rs
crates/zn-spec/: Cargo.toml
crates/zn-spec/src/: learning_memory.rs  lib.rs  memory_store.rs  memory_tool.rs  session_search.rs  skill_format.rs  skill_manager.rs
crates/zn-spec/src/snapshots/: zn_spec__skill_format__tests__render_skill_rendered.snap  zn_spec__snapshot_tests__manifest_json.snap  zn_spec__snapshot_tests__render_tasks_markdown.snap
crates/zn-types/: Cargo.toml
crates/zn-types/src/: a2a.rs  core.rs  drift.rs  error.rs  evolution.rs  execution.rs  github.rs  governance.rs  lib.rs  memory.rs  proposal.rs  security.rs  state_machine.rs  team.rs
crates/zn-types/src/snapshots/: zn_types__snapshot_tests__dag_validation_cycle.snap  zn_types__snapshot_tests__dag_validation_result_valid.snap  zn_types__snapshot_tests__proposal_serialization.snap  zn_types__snapshot_tests__state_transition.snap
demo_project/: package-lock.json  package.json
demo_project/.zero_nine/evolve/: evaluations.jsonl
demo_project/.zero_nine/evolve/candidates/: 1-1.json  2-2.json  3-3.json  4-4.json
demo_project/.zero_nine/loop/: iteration-log.ndjson  session-state.json
demo_project/.zero_nine/proposals/20260405034809-goal-10/: dag.json  design.md  progress.json  proposal.json  proposal.md  task-3-report.md  tasks.md  verification.md
demo_project/.zero_nine/proposals/20260405041403-goal-17/: dag.json  progress.json  proposal.json  proposal.md  task-1-report.md  task-2-report.md  task-4-report.md
demo_project/.zero_nine/runtime/: events.ndjson
demo_project_v2/.zero_nine/evolve/candidates/: 1-1.json  2-2.json  3-3.json  4-4.json
demo_project_v2/.zero_nine/loop/: iteration-log.ndjson  session-state.json
demo_project_v2/.zero_nine/proposals/20260405061252-test-run/: acceptance.md  dag.json  design.md  progress.json  progress.txt  proposal.json  proposal.md  requirement-packet.json  requirements.md  task-1-envelope.json  task-1-report.md  task-2-envelope.json  task-2-report.md  task-3-envelope.json  task-4-report.md  tasks.md  verification.md
demo_project_v2/.zero_nine/runtime/: current-envelope.json  events.ndjson
demo_project_v3/.zero_nine/: manifest.json
demo_project_v3/.zero_nine/evolve/: evaluations.jsonl
demo_project_v3/.zero_nine/evolve/candidates/: 1-1.json  2-2.json  3-3.json  4-4.json
demo_project_v3/.zero_nine/loop/: iteration-log.ndjson  session-state.json
demo_project_v3/.zero_nine/runtime/: current-envelope.json  events.ndjson
docs/: agent-philosophy.md  architecture.md  enhanced-architecture.md  evolution_engine_report.md  gap-analysis.md  jiuwenswarm-borrow-plan.md  md2pdf.py  next-phase-design.md  project-analysis.md  quickstart.md  upgrade-status.md  workflow.md
docs/plans/: 2026-04-13-zn-bridge-grpc-design.md
scripts/: bootstrap_zero_nine.sh
(+37 files in other folders)
