[workspace]
members = [
  "crates/zn-types",
  "crates/zn-spec",
  "crates/zn-loop",
  "crates/zn-exec",
  "crates/zn-evolve",
  "crates/zn-host",
  "crates/zn-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Manus AI"]
license = "MIT"
repository = "https://github.com/example/Zero_Nine"
description = "Zero_Nine: a Rust orchestration core that unifies spec management, execution policy, long-running task loops, and skill evolution for Claude Code CLI and OpenCode CLI."

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
