[workspace]
members = [
  "crates/zn-types",
  "crates/zn-spec",
  "crates/zn-loop",
  "crates/zn-exec",
  "crates/zn-evolve",
  "crates/zn-host",
  "crates/zn-cli",
  "crates/zn-bridge",
  "crates/zn-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Manus AI"]
license = "MIT"
repository = "https://github.com/example/Zero_Nine"
description = "Zero_Nine: a Rust orchestration core that unifies spec management, execution policy, long-running task loops, and skill evolution for Claude Code CLI and OpenCode CLI."

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tonic = "0.12"
tonic-build = "0.12"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
