[package]
name = "zn-agent-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building external agents that connect to Zero_Nine orchestrator"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
zn-types = { path = "../zn-types" }
zn-bridge = { path = "../zn-bridge" }
