[package]
name = "zn-evolve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Evolution and scoring engine for Zero_Nine"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
zn-types = { path = "../zn-types" }
