[package]
name = "zn-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Execution policy engine for Zero_Nine"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
zn-types = { path = "../zn-types" }
