[package]
name = "zn-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Execution policy engine for Zero_Nine"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
zn-types = { path = "../zn-types" }
zn-bridge = { path = "../zn-bridge" }
zn-evolve = { path = "../zn-evolve" }
reqwest.workspace = true
