[package]
name = "zn-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Host adapters for Claude Code and OpenCode"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
zn-types = { path = "../zn-types" }
zn-spec = { path = "../zn-spec" }
