[package]
name = "zn-spec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Spec and artifact management for Zero_Nine"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
zn-types = { path = "../zn-types" }
